--- a/html/updateComp.html
+++ b/html/updateComp.html
@@ -22,7 +22,7 @@
                 </form>
             </table>
         </font>
-        <button type="submit" value="Send" class="btn btn-outline-dark" ng-click="updateComp()">Update</button>
+        <button type="submit" value="Send" class="btn btn-outline-dark" ng-click="updateComp() ; clearAlerts()">Update</button>
         <button type="reset" value="Reset form" class="btn btn-outline-dark" ng-click="clearUpdate()">Clear</button>
     </center>
 </div>
