check what radio button is checked + bootstrap design for radio

--- a/html/insertNewComp.html
+++ b/html/insertNewComp.html
@@ -15,7 +15,7 @@
                 </form>
             </table>
         </font>
-        <button type="submit" value="send" class="btn btn-outline-dark" ng-click="insertNewComp()">Add New Company</button>
+        <button type="submit" value="send" class="btn btn-outline-dark" ng-click="insertNewComp() ; getCompIDs();">Add New Company</button>
         <button type="reset" value="Reset form" class="btn btn-outline-dark" ng-click="clearInsert()">Clear</button>
     </center>
 </div>
