--- a/html/nav.html
+++ b/html/nav.html
@@ -36,10 +36,10 @@
 							<a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink1" data-toggle="dropdown" href="#"  aria-haspopup="true"
 							   aria-expanded="false">Update</a>
 							<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" href="#" ng-click="show_insert_new_comp();"><i class="fas fa-building"></i> Insert New Company </a>
+								<a class="dropdown-item" href="#" ng-click="show_insert_new_comp();"><i class="fas fa-plus"></i> Add New Company </a>
 								<a class="dropdown-item" href="#" ng-click="show_update_comp();"><i class="fas fa-edit"></i> Update Company </a>
 								<a class="dropdown-item" href="#" ng-click="show_delete_comp();"><i class="fas fa-trash"></i> Delete Company </a>
-								<a class="dropdown-item" href="#" ng-click="show_insert_new_file();"><i class="fas fa-file"></i> Insert New File </a>
+								<a class="dropdown-item" href="#" ng-click="show_insert_new_file();"><i class="fas fa-file-upload"></i> Upload New File </a>
 							</div>
 						</li>
 					</li>
