--- a/html/nav.html
+++ b/html/nav.html
@@ -66,7 +66,7 @@
 						   aria-expanded="false">More</a>
 						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="#" ng-click="nav_bar_admin();">Admin</a>
-							<a class="dropdown-item" href="#" ng-click="nav_bar_log_out();">Log Out</a>
+							<a class="dropdown-item" href="#"><form action="/aviv/php/logout.php"><button style="padding: 0;bottom: 0;" type="submit"  class="btn btn-link">logout</button> </form> </a>
 						</div>
 					 </li>
 				</ul>
