--- a/html/nav.html
+++ b/html/nav.html
@@ -34,12 +34,8 @@
                             </div>
                         </li>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#" ng-click="">
-							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
-							</span>
-							Update
-						</a>
+					<li class="nav-item" id="nav_update">
+
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#" ng-click="show_stats();get_companies()">
@@ -64,9 +60,8 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
 						   aria-expanded="false">More</a>
-						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#" ng-click="nav_bar_admin();">Admin</a>
-							<a class="dropdown-item" href="#"><form action="/aviv/php/logout.php"><button style="padding: 0;bottom: 0;" type="submit"  class="btn btn-link">logout</button> </form> </a>
+						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" id="navbar_admin">
+
 						</div>
 					 </li>
 				</ul>
@@ -74,4 +69,71 @@
 			<!-- Items -->
 	</nav>
 		<!-- Static navbar -->
+
+
+	<div class="modal fade" id="admin_modal" tabindex="-1" role="dialog" aria-labelledby="Admin Modal" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" >Admin Settings</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<table  class="table table-striped table-bordered">
+						<tr>
+							<th>
+								uid
+							</th>
+							<th>
+								Full Name
+							</th>
+							<th>
+								Email
+							</th>
+							<th>
+								Admin?
+							</th>
+						</tr>
+						<tr ng-repeat="user in allUsers">
+							<td>
+								{{user.uid}}
+							</td>
+							<td>
+								{{user.full_name}}
+							</td>
+							<td>
+								{{user.email}}
+							</td>
+
+							<td ng-if="user.isAdmin=='1'" >
+								<label>
+									<input ng-if="user.isCurUser==1" type="checkbox" value="" checked disabled>
+									<input ng-if="user.isCurUser==0" type="checkbox" value="" checked>
+									<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+								</label>
+							</td>
+							<td ng-if="user.isAdmin=='0'"  >
+								<label>
+									<input type="checkbox" value="">
+									<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+								</label>
+							</td>
+
+						</tr>
+					</table>
+
+
+
+
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 </div>	
