add bar to stats

--- a/html/home.html
+++ b/html/home.html
@@ -32,50 +32,24 @@
 	<div class="col-sm-12" style="margin-top: 10px">
 		<div class="container-fluid text-center">
 			<div class="row">
-
-				<div class="col-sm-5">
-					<h4>Subscribe Us:</h4>
-					<form>
-						<div class="input-group">
-							<input type="email" class="form-control" placeholder="Email Address" required>
-							<div class="input-group-btn">
-								<button type="button" class="btn btn-info">Subscribe</button>
-							</div>
-						</div>
-					</form>
+				<div class="col-sm-2 contactFields">
+					<h4 style="width: fit-content">Contact Us:</h4>
 				</div>
-
-				<div class="col-sm-7">
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-sm-4">
-								<h4>Contact Us:</h4>
-							</div>
-							<div class="col-sm-4 form-group">
-								<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-							</div>
-							<div class="col-sm-4 form-group" style="padding: 0 0">
-								<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-							</div>
-						</div>
-					</div>
-
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-sm-10">
-								<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="1"></textarea>
-							</div>
-							<div class="col-sm-2">
-								<button class="btn btn-info" type="submit">Send</button>
-							</div>
-						</div>
-					</div>
-
-
+				<div class="col-sm-2 form-group contactFields">
+					<input class="form-control" id="contactName" name="name" placeholder="Name" type="text" required>
 				</div>
-
+				<div class="col-sm-2 form-group contactFields" style="padding: 0 0">
+					<input class="form-control" id="contactEmail" name="email" placeholder="Email" type="email" required>
+				</div>
+				<div class="col-sm-5 contactFields">
+					<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="1"></textarea>
+				</div>
+				<div class="col-sm-1 contactFields">
+					<button class="btn btn-info" type="submit">Send</button>
+				</div>
 			</div>
 		</div>
+	</div>
 
 
 	</div>
