--- a/html/industry.html
+++ b/html/industry.html
@@ -1,8 +1,11 @@
 <div id="stats" style="margin-top: 95px">
 
-
-    <div style="width: 450px;height: 450px">
+    <div style="width: 40%; height: 60%; display: inline-block">
         <canvas id="myPieChart" width="150px" height="150px"></canvas>
     </div>
 
-</div> <!--stats div-->
+    <div style="width: 40%; height: 60%; display: inline-block">
+        <canvas id="stackedBar" width="150px" height="150px"></canvas>
+    </div>
+
+</div>
