change pie to doughnut and update stats about num of connection

--- a/html/industry.html
+++ b/html/industry.html
@@ -1,11 +1,24 @@
 <div id="stats" style="margin-top: 95px">
 
-    <div style="width: 40%; height: 60%; display: inline-block">
-        <canvas id="myPieChart" width="150px" height="150px"></canvas>
+
+    <div class="firstStats" style="height: fit-content">
+        <div style="width: 30%; height: 10%; display: inline-block">
+            <canvas id="ProductsDoughnutChart" width="100px" height="100px"></canvas>
+        </div>
+
+        <div style="width: 30%; height: 10%; display: inline-block">
+            <canvas id="IndustryDoughnutChart" width="100px" height="100px"></canvas>
+        </div>
+
+        <div style="width: 30%; height: 10%; display: inline-block">
+            <canvas id="ConnectionDoughnutChart" width="100px" height="100px"></canvas>
+        </div>
     </div>
 
-    <div style="width: 40%; height: 60%; display: inline-block">
-        <canvas id="stackedBar" width="150px" height="150px"></canvas>
+    <div class="secondStats" style="height: fit-content">
+        <div style="width: 40%; height: 60%; display: inline-block">
+            <canvas id="stackedBar" width="150px" height="150px"></canvas>
+        </div>
     </div>
 
 </div>
