--- a/html/nav.html
+++ b/html/nav.html
@@ -51,7 +51,7 @@
 
 					</li>
 					<li class="nav-item">
-                        <a class="nav-link" href="#" ng-click="show_stats(); get_companies()">
+                        <a class="nav-link" href="#" ng-click="show_stats();">
 								<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
 								</span>
                             Statistics
