--- a/html/deleteComp.html
+++ b/html/deleteComp.html
@@ -1,17 +1,16 @@
 <div id="delete_comp" style="margin-top: 70px">
-    <link href='https://fonts.googleapis.com/css?family=Della Respira' rel='stylesheet'>
-    <h1 style="text-align: center; font-family: Della Respira; font-size:4vw; text-shadow: 2px 2px #808080"><b>Delete Company</b></h1>
+    <h1 style="text-align: center; font-family: 'Maven Pro', sans-serif; font-size:4vw; text-shadow: 2px 2px #808080"><b>Delete Company</b></h1>
     <center>
-        <font face="Della Respira">
+        <font face="Maven Pro">
             <p>Please insert the ID of the company<br>
                 you wish to delete</p>
         </font>
-        <font face="Della Respira">
+        <font face="Maven Pro">
             <table border="0">
                 <tr><td><label>Select company ID: </label></td><td>
                 <input list="selectedID" class="form-control" ng-change="changeID()" ng-model="selectedIdValue">
                 <datalist id="selectedID">
-                    <option ng-repeat="ID in arrayOfCompIDs" value="{{ID}}">{{ID}}</option>
+                    <option ng-repeat="identifier in arrayOfCompIDs" value="{{identifier}}">{{identifier}}</option>
                 </datalist></td><td>
                 <button type="submit" value="Send" class="btn btn-outline-dark" ng-click="deleteComp()"><i class="fa fa-trash"></i>   Delete</button></td></tr>
             </table>
