--- a/html/insertNewComp.html
+++ b/html/insertNewComp.html
@@ -1,15 +1,14 @@
 <div id="new_comp" style="margin-top: 70px">
-    <link href='https://fonts.googleapis.com/css?family=Alegreya SC' rel='stylesheet'>
-    <h1 style="text-align: center; font-family: Alegreya SC; font-size:4vw; text-shadow: 2px 2px #808080"><b>Add New Company</b></h1>
+    <h1 style="text-align: center; font-family: 'Maven Pro', sans-serif; font-size:4vw; text-shadow: 2px 2px #808080"><b>Add New Company</b></h1>
     <center>
-        <font face="Alegreya SC">
+        <font face="Maven Pro">
             <p>Please insert the following details<br>
             of the company you wish to add</p>
         </font>
-        <font face="Alegreya SC">
+        <font face="Maven Pro">
             <table border="0">
                 <form method="Post">
-                    <tr><td>Company ID: </td><td><input class="form-control" type="text" name="companyID" id="compID" required></td></tr>
+                    <tr><td>Company identifier: </td><td><input class="form-control" type="text" name="companyID" id="compID" required></td></tr>
                     <tr><td>Company Name: </td><td><input class="form-control" type="text" name="companyName" id="compName"></td></tr>
                     <tr><td>Street: </td><td><input class="form-control" type="text" name="street" id="compStreet"></td></tr>
                     <tr><td>Country: </td><td><input class="form-control" type="text" name="country" id="compCountry"></td></tr>
