--- a/html/updateComp.html
+++ b/html/updateComp.html
@@ -1,18 +1,17 @@
 <div id="update_comp" style="margin-top: 70px">
-    <link href='https://fonts.googleapis.com/css?family=Overlock SC' rel='stylesheet'>
-    <h1 style="text-align: center; font-family: Overlock SC; font-size:4vw; text-shadow: 2px 2px #808080"><b>Update Existing Company</b></h1>
+    <h1 style="text-align: center; font-family: 'Maven Pro', sans-serif; font-size:4vw; text-shadow: 2px 2px #808080"><b>Update Existing Company</b></h1>
     <center>
-        <font face="Overlock SC">
+        <font face="Maven Pro">
             <p>Please select the ID of the company you wish to update<br>
                 it's details and insert the new information</p>
         </font>
-        <font face="Overlock SC">
+        <font face="Maven Pro">
             <table border="0">
                 <form method="Post">
                     <tr><td><label>Select company ID: </label></td><td>
                         <input list="selectedID" class="form-control" ng-change="changeID()" ng-model="selectedIdValue">
                         <datalist id="selectedID">
-                            <option ng-repeat="ID in arrayOfCompIDs" value="{{ID}}">{{ID}}</option>
+                            <option ng-repeat="identifier in arrayOfCompIDs" value="{{identifier}}">{{identifier}}</option>
                         </datalist>
                     <tr><td>Details to Update: </td><td><select class="custom-select mr-sm-2" name="compDetails" id="compDetails" ng-model="selectedCompDetails">
                         <option>name</option>
