--- a/html/nav.html
+++ b/html/nav.html
@@ -18,7 +18,7 @@
 						</a>
 					</li>
 					<li class="nav-item" >
-						<a class="nav-link" href="#" ng-click="">
+						<a class="nav-link" href="#" ng-click="show_about_us()">
 							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true" >
 							</span>
 							About Us
